style: 优化弹窗滚动交互、单行标题基线对齐、操作栏垂直居中与高对比度复选框样式